# cfas

./: .coverage  .gitignore  README.md  WRITEUP.md  pyproject.toml
cfas/: __init__.py  agent.py  classify.py  config.py  gate.py  intake.py  llm.py  main.py  models.py  pipeline.py  report.py  retry.py  review.py  tools.py  trace.py
data/: cs_guidelines.json  customers.json  policies.json
samples/case-1-happy-refund/: input.json  report.json  trace.json
samples/case-2-urgent-bug/: input.json  report.json  trace.json
samples/case-3-missing-customer/: input.json  report.json  trace.json
samples/case-4-ambiguous/: input.json  report.json  trace.json
samples/case-5-llm-failure/: input.json  report.json  trace.json
samples/case-6-prompt-injection/: input.json  report.json  trace.json
samples/case-7-abusive-feedback/: input.json  report.json  trace.json
tests/: factories.py  fakes.py  test_agent.py  test_classify.py  test_data.py  test_gate.py  test_intake.py  test_llm.py  test_main.py  test_models.py  test_pipeline.py  test_report.py  test_retry.py  test_review.py  test_tools.py  test_trace.py
